--- a/costaurant/foods/templates/foods/index.html
+++ b/costaurant/foods/templates/foods/index.html
@@ -11,7 +11,7 @@
   <div class="info">
     <h3>코딩에 빠진 닭</h3>
     <P>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
-    <a href="#">메뉴 보기</a>
+    <a href="chicken">메뉴 보기</a>
   </div>
 </div>
 
@@ -20,7 +20,7 @@
   <div class="info">
     <h3>코코스시</h3>
     <P>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
-    <a href="#">메뉴 보기</a>
+    <a href="chicken">메뉴 보기</a>
   </div>
 </div>
 
